# freebies-game

./: .gitmodules  CMakeLists.txt  README.md  main.cpp  test.xml
AssetsParser/: CMakeLists.txt  CharacterParser.cpp  CharacterParser.h
Core/: CMakeLists.txt
Core/Animations/: AnimationSequence.cpp  AnimationSequence.h  FadeAnimation.cpp  FadeAnimation.h  IAnimation.h
Core/Animator/: Animator.cpp  Animator.h  AnimatorFactory.cpp  AnimatorFactory.h
Core/Application/: Application.cpp  Application.h
Core/AssetsParser/: CharacterParser.cpp  CharacterParser.h  MapParser.cpp  MapParser.h
Core/Character/: Character.cpp  Character.h
Core/CharacterController/: CharacterController.cpp  CharacterController.h
Core/Characters/: Animations.cpp  Animations.h  Character.cpp  Character.h  Character2.h  CharacterCreator.cpp  CharacterCreator.h  FrameAction.h  FrameAnimation.h  IAnimation.h
Core/CollisionInfo/: CollisionInfo.cpp  CollisionInfo.h  CollisionListener.cpp  CollisionListener.h
Core/Entity/: Entity.cpp  Entity.h  TextureWrapper.h
Core/ExperimentalAnimation/: Character2.cpp  FrameAnimation.cpp  IAnimation.h  ISpriteAnimation.h
Core/FSM/: State.h  StateMachine.cpp  StateMachine.h
Core/InputController/: InputController.cpp  InputController.h
Core/Math/: Easing.cpp  Easing.h  Math.h  NaturalCompare.h  NaturalSort.h  RangeMap.h  WorldConvertations.h
Core/Resources/: IResourceHolder.h  ResourceHolder.h  Resources.h
Core/Timer/: Timer.cpp  Timer.h
Core/World/: Material.cpp  Material.h  PWorld.cpp  PWorld.h  PhysicDebugDraw.cpp  (+7 more)
libs/: CMakeLists.txt
(+31 files in other folders)
